--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>Header Content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running location, distances and times
+    </section>
+    <footer>
+        social links here
+    </footer>
+
 </body>
 </html>
