--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2 id="welcome"> Why Love Running with us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy</h2>
+                <h2>Feel Healthy <i class="fas fa-heartbeat"></i></h2>
                 <hr>
                 <p>
                     Since it improves aerobic fitness, running is a great way to 
@@ -51,7 +51,7 @@
                 </p>
             </div>    
             <div class="left-about-heading">
-                <h2>Feel Free</h2>
+                <h2>Feel Free <i class="fab fa-fly"></i></h2>
                 <hr>
                 <p>
                     Physical exercise, running included, is known to release endorphins in 
@@ -62,7 +62,7 @@
         </div>
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Social</h2>
+                <h2>Get Social <i class="fas fa-globe"></i></h2>
                 <hr>
                 <p>
                     When we run with others, we can run farther and faster more easily. Social running can
@@ -70,7 +70,7 @@
                 </p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Strong</h2>
+                <h2>Feel Strong <i class="fas fa-dumbbell"></i></h2>
                 <hr>
                 <p>
                     Running strengthens 
@@ -94,6 +94,8 @@
     <footer>
         social links here
     </footer>
+
+    <script src="https://kit.fontawesome.com/b16a869446.js" crossorigin="anonymous"></script>
 
 </body>
 
