--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,19 @@
             </ul>
         </nav>
     </header>
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes runnig together">
+        <img src="assets/images/girls.jpg" alt="Three girls ar charity pain running festival">
+        <img src="assets/images/runner3.jpg" alt="Solo male runner jogging on a beach">
+        <img src="assets/images/man.jpg" alt="Man at the charity running festival">
+        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through Phoenix park">
+        <img src="assets/images/runner2.jpg" alt="Runners completing in marathon">
+        <img src="assets/images/runner4.jpg" alt="Solo female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="Two women runners taking a muddy selfie after the Mud Runners Championship">
+        
+
+    </section>
  
     <footer>
         <ul class="social-networks">
